# sanabotti

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml
src/: config.rs  discord.rs  error.rs  lib.rs  main.rs
src/actors/: game_state.rs  llm_validator.rs  message_reaction.rs  mod.rs  word_validator.rs
src/validation/: dictionary.rs  llm.rs  mod.rs  rules.rs
